files for IT services tab

--- a/bcp-dr.html
+++ b/bcp-dr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Data Center Consulting</title>
+		<title>BCP/DR</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/hdd.svg" alt="Data Center Consulting" />
-					<h1><a href="#">Data Center Consulting</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/trash-alt.svg" alt="Cloud Consulting" />
+					<h1><a href="#">Business Continuity Planning - Disaster Recovery</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
@@ -62,68 +62,38 @@
 									<header>
 										<h2>Introduction</h2>
 									</header>
-									<p>
-										Data Centre consulting are services focused towards optimizing Data Centre elements.
-										Yashasvi follows an innovative approach in Data Centre design, assessment, migration and consolidation.
-										Our Accelerate methodology will facilitate design sessions, quickly driving your team to a detailed plan and
-										accelerating the completion of your design, consolidation and relocation.
-									</p>
-									</p>
 									<div class="center">
-										<img src="images/data-center-consulting-process.png" alt="Data Center Consulting Process" />
+										<img src="images/bcp-dr.png" alt="Business Continuity Planning - Disaster Recovery" width="600" height="350" />
 										<br>
-										<i>Fig.: Data Center Consulting Process</i>
+										<i>Fig.: Business Continuity Planning - Disaster Recovery</i>
 									</div>
+									<br>
 									<section>
-										<header>
-											<h3>Data Centre Design and Assessment</h3>
-										</header>
 										<p>
-											Yashasvi follows a structured and modular approach in Data Centre Design, yet keeping the design as simple as
-											possible. Based on the customer business requirement a blue print of the new Data Centre will be provided which
-											incorporates the latest Data Centre standards. The design will incorporate the following aspects which includes
-										</p>
-										<ul>
-											<li>Sizing (Power, Cooling, Rack configuration, Fire suppression, Cabling layout)</li>
-											<li>Scalability for future growth</li>
-											<li>Redundancy (Based on tiers)</li>
-											<li>Physical security</li>
-											<li>Optimization using green technologies</li>
-										</ul>
-										<p>Data Centre assessment involves reviewing the readiness of existing Data Centre facility and critical physical
-											infrastructure components – including the Power systems, Cooling systems, and Rack configuration.
+											Business Continuity (BC) management is a service that provides a framework to ensure the resilience of your
+											business to any eventuality. It ensures continuity of service to your key customers and the protection of
+											your brand and reputation. Corporate governance and industry legislation have made executives liable for the
+											security of their corporate information. It provides a basis for planning to ensure your long-term survivability
+											following a disruptive event including both on-premise and cloud workloads and data. How data is safe in cloud and
+											cloud provider liability associated with data protection and data security.
 										</p>
 									</section>
 									<section>
 										<header>
-											<h3>Deliverables</h3>
+											<h3>Deliverables:</h3>
 										</header>
 										<p>
-											As part of this assessment Yashasvi will develop a comprehensive report that includes recommendations to:
+											Following are the deliverables of this service:
 										</p>
 										<ul>
-											<li>Address your specific concerns</li>
-											<li>Correct deficiencies</li>
-											<li>Optimize existing conditions</li>
-											<li>Increase infrastructure capabilities</li>
-											<li>xtend Data Centre service life</li>
+											<li>Detailed Business Continuity Plan</li>
+											<li>Detailed Disaster Recovery Plans</li>
+											<li>Disaster Recovery drills to test the BCP/DR plans</li>
 										</ul>
-									</section>
-									<section>
-										<header>
-											<h3>Data Center Build Out</h3>
-										</header>
-										<p>
-										As part of the Data Centre Build Out service Yashasvi will ensure the commissioning of the new Data Centre as per the
-										design and architecture. Yashasvi will undertake the program management activities and ensure various phases of the
-										plan are executed on schedule. Yashasvi will liaison with various other groups which includes HVAC, cabling etc and ensure that we
-										act as a single point of contact to the customer.
-										</p>
 									</section>
 								</article>
 							</div>
 							<div class="col-4 col-12-medium">
-
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
