--- a/cloud-consulting.html
+++ b/cloud-consulting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Data Center Consulting</title>
+		<title>Cloud Consulting</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/hdd.svg" alt="Data Center Consulting" />
-					<h1><a href="#">Data Center Consulting</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/cloud.svg" alt="Cloud Consulting" />
+					<h1><a href="#">Cloud Consulting</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
@@ -62,68 +62,84 @@
 									<header>
 										<h2>Introduction</h2>
 									</header>
-									<p>
-										Data Centre consulting are services focused towards optimizing Data Centre elements.
-										Yashasvi follows an innovative approach in Data Centre design, assessment, migration and consolidation.
-										Our Accelerate methodology will facilitate design sessions, quickly driving your team to a detailed plan and
-										accelerating the completion of your design, consolidation and relocation.
-									</p>
-									</p>
 									<div class="center">
-										<img src="images/data-center-consulting-process.png" alt="Data Center Consulting Process" />
+										<img src="images/cloud-consulting-2.png" alt="Data Center Consulting Process" width="600" height="400" />
 										<br>
-										<i>Fig.: Data Center Consulting Process</i>
+										<i>Fig.: Cloud Consulting Services</i>
 									</div>
 									<section>
 										<header>
-											<h3>Data Centre Design and Assessment</h3>
+											<h3>Architecture and Design Services</h3>
 										</header>
 										<p>
-											Yashasvi follows a structured and modular approach in Data Centre Design, yet keeping the design as simple as
-											possible. Based on the customer business requirement a blue print of the new Data Centre will be provided which
-											incorporates the latest Data Centre standards. The design will incorporate the following aspects which includes
+											This service offering can help streamline majority of intricacy involved in catering to Cloud needs and hence
+											reducing costs. With the growing importance on digital transformation, many IT departments are trying to transform
+											their legacy environments to better efficiency and improve productivity.
 										</p>
-										<ul>
-											<li>Sizing (Power, Cooling, Rack configuration, Fire suppression, Cabling layout)</li>
-											<li>Scalability for future growth</li>
-											<li>Redundancy (Based on tiers)</li>
-											<li>Physical security</li>
-											<li>Optimization using green technologies</li>
-										</ul>
-										<p>Data Centre assessment involves reviewing the readiness of existing Data Centre facility and critical physical
-											infrastructure components – including the Power systems, Cooling systems, and Rack configuration.
-										</p>
-									</section>
-									<section>
-										<header>
-											<h3>Deliverables</h3>
-										</header>
 										<p>
-											As part of this assessment Yashasvi will develop a comprehensive report that includes recommendations to:
+											Design and Build cloud adoption roadmap and define a customized business service catalog together with deployment
+											options based on the unique needs of the enterprise. As part of this service the following areas of Cloud is addressed which includes:
 										</p>
 										<ul>
-											<li>Address your specific concerns</li>
-											<li>Correct deficiencies</li>
-											<li>Optimize existing conditions</li>
-											<li>Increase infrastructure capabilities</li>
-											<li>xtend Data Centre service life</li>
+											<li>Readiness Assessment</li>
+											<li>Cloud-adoption road map</li>
+											<li>ROI and Business Cases</li>
+											<li>Identification of the Business Services Catalogue</li>
+											<li>Organizational Change Management</li>
+											<li>Governance, Risk and Compliance Advisory</li>
 										</ul>
 									</section>
 									<section>
 										<header>
-											<h3>Data Center Build Out</h3>
+											<h3>Cloud Readiness Consulting Services</h3>
 										</header>
 										<p>
-										As part of the Data Centre Build Out service Yashasvi will ensure the commissioning of the new Data Centre as per the
-										design and architecture. Yashasvi will undertake the program management activities and ensure various phases of the
-										plan are executed on schedule. Yashasvi will liaison with various other groups which includes HVAC, cabling etc and ensure that we
-										act as a single point of contact to the customer.
+											Cloud assessment is a comprehensive review of overall Cloud transformation to keep pace with cloud growth.
+											The objective of this service is to reduce the growing complexities associated with applications and cost by unearthing
+											hidden costs. Yashasvi understands the mapping a migration path and architecture design for cloud requires an in-depth
+											understanding of an organization entire IT infrastructure, architecture, interdependence and risks.
+											The following aspects will be looked into as part of this service:
 										</p>
+										<ul>
+											<li>Cloud Architecture Review</li>
+											<li>Evaluate Cloud Readiness across Business Alignment, organization, Infrastructure and Applications</li>
+											<li>Identify gaps in your present state to desired state</li>
+											<li>Recommendation and best practices</li>
+											<li>Segregation and prioritization of applications for migration</li>
+											<li>High Level phased plan for migration of applications</li>
+											<li>Develop a detailed application migration roadmap</li>
+											<li>Understand and Develop a Security roadmap</li>
+											<li>Evaluate cloud based DR/BCP solution requirements</li>
+											<li>Evaluate cloud based Backup and Archival requirements</li>
+											<li>Evaluate cloud orchestration and Service Catalogue</li>
+											<li>Develop a high level cloud road map</li>
+										</ul>
+									</section>
+									<section>
+										<header>
+											<h3>Implementation & Migration Services</h3>
+										</header>
+										<p>
+											Yashasvi helps you establish and migrate to a cloud foundation for the delivery of elastic, self-service infrastructure
+											capabilities seamlessly integrated with their traditional enterprise environment, including:
+										</p>
+										<ul>
+											<li>Proof of Concept implementation</li>
+											<li>Private Cloud Infrastructure Implementation: OpenStack, VMWare, and Microsoft</li>
+											<li>Migration of applications from dedicated and virtualization platforms to cloud platform</li>
+											<li>Migration of virtualization platforms to cloud platforms</li>
+											<li>Building BCP/DR services using Cloud platforms</li>
+											<li>Integrate the traditional infrastructure with cloud infrastructure services:</li>
+											<ol>
+												<li>Private Cloud</li>
+												<li>Public Cloud</li>
+												<li>Hybrid Cloud</li>
+											</ol>
+										</ul>
 									</section>
 								</article>
 							</div>
 							<div class="col-4 col-12-medium">
-
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
