--- a/end-user-computing.html
+++ b/end-user-computing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Data Center Consulting</title>
+		<title>End User Computing</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/hdd.svg" alt="Data Center Consulting" />
-					<h1><a href="#">Data Center Consulting</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/archive.svg" alt="Compute, Storage and Backup" />
+					<h1><a href="#">Compute, Storage and Backup</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
@@ -62,63 +62,30 @@
 									<header>
 										<h2>Introduction</h2>
 									</header>
-									<p>
-										Data Centre consulting are services focused towards optimizing Data Centre elements.
-										Yashasvi follows an innovative approach in Data Centre design, assessment, migration and consolidation.
-										Our Accelerate methodology will facilitate design sessions, quickly driving your team to a detailed plan and
-										accelerating the completion of your design, consolidation and relocation.
-									</p>
-									</p>
 									<div class="center">
-										<img src="images/data-center-consulting-process.png" alt="Data Center Consulting Process" />
+										<img src="images/end-user-computing.png" alt="End User Computing" width="600" height="400" />
 										<br>
-										<i>Fig.: Data Center Consulting Process</i>
+										<i>Fig.: End User Computing</i>
 									</div>
+									<br>
 									<section>
 										<header>
-											<h3>Data Centre Design and Assessment</h3>
+											<h3>End User Computing Services</h3><br>
 										</header>
 										<p>
-											Yashasvi follows a structured and modular approach in Data Centre Design, yet keeping the design as simple as
-											possible. Based on the customer business requirement a blue print of the new Data Centre will be provided which
-											incorporates the latest Data Centre standards. The design will incorporate the following aspects which includes
+											This service offering can help streamline majority of intricacy involved in catering to end-user needs and
+											hence reducing costs. The service is aimed at improving end user efficiency and improves productivity. As
+											part of this service the following areas of end-user computing area is addressed which includes:
 										</p>
 										<ul>
-											<li>Sizing (Power, Cooling, Rack configuration, Fire suppression, Cabling layout)</li>
-											<li>Scalability for future growth</li>
-											<li>Redundancy (Based on tiers)</li>
-											<li>Physical security</li>
-											<li>Optimization using green technologies</li>
+											<li>Asset management</li>
+											<li>Patch management and delivery</li>
+											<li>Desktop standardization</li>
+											<li>License management</li>
+											<li>Software distribution</li>
+											<li>End point security</li>
+											<li>Desktop lifecycle management</li>
 										</ul>
-										<p>Data Centre assessment involves reviewing the readiness of existing Data Centre facility and critical physical
-											infrastructure components – including the Power systems, Cooling systems, and Rack configuration.
-										</p>
-									</section>
-									<section>
-										<header>
-											<h3>Deliverables</h3>
-										</header>
-										<p>
-											As part of this assessment Yashasvi will develop a comprehensive report that includes recommendations to:
-										</p>
-										<ul>
-											<li>Address your specific concerns</li>
-											<li>Correct deficiencies</li>
-											<li>Optimize existing conditions</li>
-											<li>Increase infrastructure capabilities</li>
-											<li>xtend Data Centre service life</li>
-										</ul>
-									</section>
-									<section>
-										<header>
-											<h3>Data Center Build Out</h3>
-										</header>
-										<p>
-										As part of the Data Centre Build Out service Yashasvi will ensure the commissioning of the new Data Centre as per the
-										design and architecture. Yashasvi will undertake the program management activities and ensure various phases of the
-										plan are executed on schedule. Yashasvi will liaison with various other groups which includes HVAC, cabling etc and ensure that we
-										act as a single point of contact to the customer.
-										</p>
 									</section>
 								</article>
 							</div>
