--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 									<a href="#">Services</a>
 									<ul>
 										<li><a href="data-center-consulting.html">Data Center Consulting</a></li>
-										<li><a href="#">Cloud Consulting</a></li>
-										<li><a href="#">IT Transformation</a></li>
-										<li><a href="#">Business Continuity Planning and Disaster Recovery</a></li>
-										<li><a href="#">Network and Collaboration</a></li>
-										<li><a href="#">Compute, Storage and Backup</a></li>
-										<li><a href="#">End User Computing</a></li>
+										<li><a href="cloud-consulting.html">Cloud Consulting</a></li>
+										<li><a href="it-transformation.html">IT Transformation</a></li>
+										<li><a href="bcp-dr.html">Business Continuity Planning and Disaster Recovery</a></li>
+										<li><a href="network-collab.html">Network and Collaboration</a></li>
+										<li><a href="compute-storage-backup.html">Compute, Storage and Backup</a></li>
+										<li><a href="end-user-computing.html">End User Computing</a></li>
 									</ul>
 								</li>
 								<li>
@@ -107,7 +107,12 @@
 										<header>
 											<h2><b>Solutions</b></h2>
 										</header>
-										<p><b>Content.</b></p>
+										<ol>
+											<li><b>Cyber Security</b></li>
+											<li><b>Data Center Solutions</b></li>
+											<li><b>Cloud Solutions</b></li>
+											<li><b>Virtualization Assessment</b></li>
+									</ol>
 									</section>
 								</div>
 							</div>
@@ -216,33 +221,25 @@
 							<div class="col-8 col-12-medium">
 								<section>
 									<header>
-										<h2><b>Summary of Services and Solutions</b></h2>
+										<h2><b>Privacy Terms</b></h2>
 									</header>
 									<ul class="dates">
 										<li>
-											<span class="date">Point <strong>1</strong></span>
-											<h3><b><a href="#">Content for Point 1.</a></b></h3>
-											<p><b>Content.</b></p>
+											<span class="date"><strong># 1</strong></span>
+											<h3><b><a href="#">Terms of Use</a></b></h3>
+											<p><b><i>Links to other websites, Termination, Governing Laws.</i></b></p>
 										</li>
 										<li>
-											<span class="date">Point <strong>2</strong></span>
-											<h3><b><a href="#">Content for Point 2.</a></b></h3>
-											<p><b>Content.</b></p>
+											<span class="date"><strong># 2</strong></span>
+											<h3><b><a href="#">Privacy Policy</a></b></h3>
+											<p><b><i>Information Collection and Use, Log Data, Cookies, Services Providers, Security, Children's Privacy.</i></b></p>
 										</li>
 										<li>
-											<span class="date">Point <strong>3</strong></span>
-											<h3><b><a href="#">Content for Point 3.</a></b></h3>
-											<p><b>Content.</b></p>
-										</li>
-										<li>
-											<span class="date">Point <strong>4</strong></span>
-											<h3><b><a href="#">Content for Point 4.</a></b></h3>
-											<p><b>Content.</b></p>
-										</li>
-										<li>
-											<span class="date">Point <strong>5</strong></span>
-											<h3><b><a href="#">Content for Point 5.</a></b></h3>
-											<p><b>Content.</b></p>
+											<span class="date"><strong># 3</strong></span>
+											<h3><b><a href="#">Code of Business Conduct</a></b></h3>
+											<p><b><i>Transparency, Respect for the Individual, Set Tone at the Top, Uphold the Law, Competition, Proprietary Information,
+												Selective Disclosure, Conflicts of Interest, Accepting Business Courtesies, Corporate Recordkeeping, Accountability,
+												Use of Company Resources, Media Inquiries.</i></b></p>
 										</li>
 									</ul>
 								</section>
@@ -283,18 +280,18 @@
 										<li>
 											<h3><b>Address</b></h3>
 											<p><b>
-												Untitled Incorporated<br />
-												1234 Somewhere Road Suite<br />
-												Nashville, TN 00000-0000
+												#418, JP Nagar 2<sup>nd</sup> Phase<br />
+												Bangalore - 560078<br />
+												Karnataka, India
 											</b></p>
 										</li>
 										<li>
 											<h3><b>Mail</b></h3>
-											<p><b><a href="#">someone@untitled.tld</a></b></p>
+											<p><b><a href="#">info@yashasvi.co.in</a></b></p>
 										</li>
 										<li>
 											<h3><b>Phone</b></h3>
-											<p><b>(800) 000-0000</b></p>
+											<p><b>+91-9845009026</b></p>
 										</li>
 									</ul>
 								</section>
@@ -303,17 +300,15 @@
 
 								<div id="copyright">
 									<ul class="links">
-										<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="#">Yashasvi Information Solutions</a></li>
+										<li>&copy; Untitled. All rights reserved.</li><li><a href="#">Yashasvi Information Solutions</a></li>
 									</ul>
 								</div>
 							</div>
 						</div>
 					</div>
 				</section>
-
 		</div>
 
-		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
