--- a/it-transformation.html
+++ b/it-transformation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Data Center Consulting</title>
+		<title>IT Transformation</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/hdd.svg" alt="Data Center Consulting" />
-					<h1><a href="#">Data Center Consulting</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/database.svg" alt="Cloud Consulting" />
+					<h1><a href="#">IT Transformation</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
@@ -59,71 +59,114 @@
 						<div class="row">
 							<div class="col-8 col-12-medium">
 								<article class="box post">
-									<header>
+									<!-- <header>
 										<h2>Introduction</h2>
 									</header>
-									<p>
-										Data Centre consulting are services focused towards optimizing Data Centre elements.
-										Yashasvi follows an innovative approach in Data Centre design, assessment, migration and consolidation.
-										Our Accelerate methodology will facilitate design sessions, quickly driving your team to a detailed plan and
-										accelerating the completion of your design, consolidation and relocation.
-									</p>
-									</p>
 									<div class="center">
-										<img src="images/data-center-consulting-process.png" alt="Data Center Consulting Process" />
+										<img src="images/cloud-consulting-2.png" alt="Data Center Consulting Process" width="600" height="400" />
 										<br>
-										<i>Fig.: Data Center Consulting Process</i>
-									</div>
+										<i>Fig.: Cloud Consulting Services</i>
+									</div> -->
 									<section>
 										<header>
-											<h3>Data Centre Design and Assessment</h3>
+											<h3>IT Transformation Process</h3>
 										</header>
 										<p>
-											Yashasvi follows a structured and modular approach in Data Centre Design, yet keeping the design as simple as
-											possible. Based on the customer business requirement a blue print of the new Data Centre will be provided which
-											incorporates the latest Data Centre standards. The design will incorporate the following aspects which includes
+											The objective of this service is to determine the “healthiness of the existing IT environment, recommend
+											appropriate processes for service improvement and suggest areas for automation (if any)”. The Scope of work for the
+											IT infrastructure assessment is focused on the following operational towers (identified services/ functional areas),
+											as indicated below:
 										</p>
 										<ul>
-											<li>Sizing (Power, Cooling, Rack configuration, Fire suppression, Cabling layout)</li>
-											<li>Scalability for future growth</li>
-											<li>Redundancy (Based on tiers)</li>
-											<li>Physical security</li>
-											<li>Optimization using green technologies</li>
-										</ul>
-										<p>Data Centre assessment involves reviewing the readiness of existing Data Centre facility and critical physical
-											infrastructure components – including the Power systems, Cooling systems, and Rack configuration.
-										</p>
-									</section>
-									<section>
-										<header>
-											<h3>Deliverables</h3>
-										</header>
-										<p>
-											As part of this assessment Yashasvi will develop a comprehensive report that includes recommendations to:
-										</p>
-										<ul>
-											<li>Address your specific concerns</li>
-											<li>Correct deficiencies</li>
-											<li>Optimize existing conditions</li>
-											<li>Increase infrastructure capabilities</li>
-											<li>xtend Data Centre service life</li>
+											<li>Server (UNIX & NT) & Storage management</li>
+											<li>Datacenter (Production) operations / ITIL process</li>
+											<li>Network (WAN/LAN) Management</li>
+											<li>Database Management</li>
+											<li>Messaging</li>
+											<li>Information Security</li>
+											<li>Disaster recovery and Business Continuity Processes</li>
+											<li>Accessing the right cloud architecture for business</li>
+											<li>Cloud Infrastructure processes for on-prim v/s cloud services</li>
 										</ul>
 									</section>
 									<section>
 										<header>
-											<h3>Data Center Build Out</h3>
+											<h3>Deliverables:</h3>
 										</header>
 										<p>
-										As part of the Data Centre Build Out service Yashasvi will ensure the commissioning of the new Data Centre as per the
-										design and architecture. Yashasvi will undertake the program management activities and ensure various phases of the
-										plan are executed on schedule. Yashasvi will liaison with various other groups which includes HVAC, cabling etc and ensure that we
-										act as a single point of contact to the customer.
+											The final report, at a broad level would consist of:
 										</p>
+										<ul>
+											<li>Our understanding of existing service delivery process</li>
+											<li>Tips on Industry standard delivery models</li>
+											<li>Potential areas for service improvement and benefits</li>
+											<li>Processes for on-premise and cloud based infrastructure</li>
+											<li>Standardization of processes</li>
+											<li>Tips on effective IT Management</li>
+											<li>Potential areas for automation</li>
+										</ul>
+										<hr>
+									</section>
+									<section>
+										<header>
+											<h3>Data Centre Consolidation</h3>
+										</header>
+										<p>
+											Sprawling servers, operating and storage systems, and desktop applications create a costly and complex IT environment.
+											To keep this computer equipment expansion manageable, Data Centre consolidation has become an increasingly popular choice for IT professionals.
+										</p>
+										<p>
+											Data Centre consolidation can help your company get the most from its resources by reducing costs, elevating
+											service levels and improving IT manageability. Data Centre consolidation brings the benefits of the Hybrid and
+											Public Cloud service to Data Centre. With the right approach, your business can achieve its returns on investment (ROI) objectives in a
+											very short period of time.
+										</p>
+										<header>
+											<h3>Deliverables:</h3>
+										</header>
+										<ul>
+											<li>Business case for Server consolidation as the first step</li>
+											<li>Baseline the existing server environment</li>
+											<li>Server utilization statistics based on peak business cycle</li>
+											<li>Consolidated Server roadmap</li>
+											<li>Cloud roadmap and integration of various work loads</li>
+											<li>ROI/TCO information</li>
+										</ul>
+									</section>
+									<hr>
+									<section>
+										<header>
+											<h3>Data Centre Relocation</h3>
+										</header>
+										<p>
+											As part of this service we will seamlessly relocate your Data Centre to a new facility through a well-defined
+											process. The following approach options are evaluated based on the customer requirement.
+										</p>
+										<ul>
+											<li><u>Lift and Shift:</u> Move the existing IT equipment’s from one location to another location, where it will perform in its current state.</li>
+											<li><u>Parallel Cut:</u> A parallel environment will be setup and data will be synced on a periodic basis to the new environment.
+												UAT will be performed on this environment before the final cutover is performed.</li>
+											<li><u>Flash Cut:</u> A high availability environment will be setup in the new location. The two cluster nodes will be separated through a geo-cluster.
+												This methodology will be suggested for application which cannot tolerate any downtime during relocation.</li>
+										</ul>
+										<header>
+											<h3>Our Approach:</h3>
+										</header>
+										<p>
+											Yashasvi will ensure that the entire relocation exercise is seamless through a range of structured activities which include:
+										</p>
+										<ul>
+											<li>Documentation of the existing IT landscape</li>
+											<li>Classification of server (Critical, Non-critical)</li>
+											<li>Backup of critical data</li>
+											<li>Documented Layout of target environment</li>
+											<li>Document the move groups based on criticality and application landscape</li>
+											<li>UAT performed after the relocation exercise/li>
+										</ul>
 									</section>
 								</article>
 							</div>
 							<div class="col-4 col-12-medium">
-
 								<section class="box">
 									<img src="images/link.svg" alt="Link" width="50" height="50" />
 									<header>
