--- a/network-collab.html
+++ b/network-collab.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Data Center Consulting</title>
+		<title>Network and Collaboration</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
@@ -10,8 +10,8 @@
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 			<section id="header">
-				<img class="portfolio-images" width="200" height="200" src="images/hdd.svg" alt="Data Center Consulting" />
-					<h1><a href="#">Data Center Consulting</a></h1>
+				<img class="portfolio-images" width="200" height="200" src="images/connectdevelop.svg" alt="Data Center Consulting" />
+					<h1><a href="#">Network and Collaboration</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
@@ -62,62 +62,102 @@
 									<header>
 										<h2>Introduction</h2>
 									</header>
-									<p>
-										Data Centre consulting are services focused towards optimizing Data Centre elements.
-										Yashasvi follows an innovative approach in Data Centre design, assessment, migration and consolidation.
-										Our Accelerate methodology will facilitate design sessions, quickly driving your team to a detailed plan and
-										accelerating the completion of your design, consolidation and relocation.
-									</p>
-									</p>
 									<div class="center">
-										<img src="images/data-center-consulting-process.png" alt="Data Center Consulting Process" />
-										<br>
-										<i>Fig.: Data Center Consulting Process</i>
+										<img src="images/network-collab.png" alt="Network and Collaboration" width="800" height="500" />
+										<i>Fig.: Network and Collaboration</i>
 									</div>
+									<br>
 									<section>
 										<header>
-											<h3>Data Centre Design and Assessment</h3>
+											<h2>Network Services</h2><br>
+											<h3>Architecture and Design Services</h3>
 										</header>
 										<p>
-											Yashasvi follows a structured and modular approach in Data Centre Design, yet keeping the design as simple as
-											possible. Based on the customer business requirement a blue print of the new Data Centre will be provided which
-											incorporates the latest Data Centre standards. The design will incorporate the following aspects which includes
+											This service provides a complete blueprint of Network, Voice and Video infrastructure to organization that
+											are building a new network or redesigning an existing Data and Voice infrastructure. Our Consulting Services
+											professionals have extensive experience working with large-scale networks. They work directly with your
+											organization’s management and operations staffs to understand your network objectives in order to recommend industry
+											best practices and the solutions and technologies that apply to your network environment.
 										</p>
-										<ul>
-											<li>Sizing (Power, Cooling, Rack configuration, Fire suppression, Cabling layout)</li>
-											<li>Scalability for future growth</li>
-											<li>Redundancy (Based on tiers)</li>
-											<li>Physical security</li>
-											<li>Optimization using green technologies</li>
-										</ul>
-										<p>Data Centre assessment involves reviewing the readiness of existing Data Centre facility and critical physical
-											infrastructure components – including the Power systems, Cooling systems, and Rack configuration.
-										</p>
-									</section>
-									<section>
 										<header>
 											<h3>Deliverables</h3>
 										</header>
-										<p>
-											As part of this assessment Yashasvi will develop a comprehensive report that includes recommendations to:
-										</p>
 										<ul>
-											<li>Address your specific concerns</li>
-											<li>Correct deficiencies</li>
-											<li>Optimize existing conditions</li>
-											<li>Increase infrastructure capabilities</li>
-											<li>xtend Data Centre service life</li>
+											<li>Detailed project plan</li>
+											<li>Network topology and traffic pattern</li>
+											<li>High level architecture and detailed design</li>
+											<li>Design encompasses the Wired and Wireless, WAN, Data Centre Networking</li>
+											<li>High level architecture and design for software-defined networking</li>
+											<li>Unified Communication and Collaboration Readiness assessment</li>
+											<li>BOM details with right balance of sourcing options</li>
+											<li>Implementation roadmap</li>
 										</ul>
 									</section>
+									<hr>
 									<section>
 										<header>
-											<h3>Data Center Build Out</h3>
+											<h3>Network Assessment</h3>
 										</header>
 										<p>
-										As part of the Data Centre Build Out service Yashasvi will ensure the commissioning of the new Data Centre as per the
-										design and architecture. Yashasvi will undertake the program management activities and ensure various phases of the
-										plan are executed on schedule. Yashasvi will liaison with various other groups which includes HVAC, cabling etc and ensure that we
-										act as a single point of contact to the customer.
+											Network Assessment services is a comprehensive review of your network infrastructure. As part of this service Yashasvi
+											consultants will work with you to determine fault tolerance, Availability, throughput and routing architecture.
+											A full analysis will carried out and recommendations provided.
+										</p>
+										<p>
+											The following aspects are looked at as part of this service:
+										</p>
+										<ul>
+											<li>Analysis of current network architecture encompassing all business touch-points. </li>
+											<li>Network traffic and pattern analysis</li>
+											<li>Network availability and fault tolerance</li>
+											<li>Network configuration information</li>
+											<li>Optimization and automation of networking</li>
+											<li>Cloud Ready Network Analysis</li>
+											<li>Network management framework</li>
+										</ul>
+									</section>
+									<hr>
+									<section>
+										<header>
+											<h2>Security Services</h2>
+											<br>
+											<h3>Architecture and Design Services</h3>
+										</header>
+										<p>
+											This service provides a complete blueprint of Information security infrastructure to organization that are building a new or redesigning
+											the existing security framework. Our consulting services professionals have extensive experience working with large-scale enterprises.
+											They work directly with your organization’s management and operations staffs to understand your security objectives in order to recommend industry
+											best practices, solutions and technologies that apply to your IT environment. Security Architecture Assessment encompasses the multiple business
+											touch-points:
+										</p>
+										<ul>
+											<li>Infrastructure Security</li>
+											<li>Secure Cloud Security</li>
+											<li>Secure Mobile</li>
+											<li>Data Leakage Prevention</li>
+											<li>Authentication and Access Management</li>
+										</ul>
+									</section>
+									<hr>
+									<section>
+										<header>
+											<h3>Information Security Assessment</h3>
+										</header>
+										<p>
+											As part of Information security Assessment will give you complete understanding of, and visibility into, the security of
+											Information Technology Infrastructure. Yashasvi will encompass the following multiple business touch
+										</p>
+										<ul>
+											<li>Detailed Network Architecture review</li>
+											<li>Penetration Testing</li>
+											<li>Vulnerability Assessment</li>
+											<li>Authentication and Authorization infrastructure review</li>
+											<li>Security policy and Procedure review</li>
+											<li>Sever and Network devices hardening</li>
+											<li>Analyse the cloud security and management</li>
+										</ul>
+										<p>
+											We use tools and process to audit your existing IT environment and ensure your organization is complainant with various security standards.
 										</p>
 									</section>
 								</article>
